--- a/Book/src/index.css
+++ b/Book/src/index.css
@@ -1,5 +1,5 @@
 .div {
-    background-image: url("https://placeimg.com/380/230/nature");
+    background-image: url("https://picsum.photos/500/500");
     background-size: 100%;
     height: 300px;
 }
